fix gap

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -10,7 +10,7 @@
         width: 100%;
         max-width: 95%;
         margin: auto;
-        gap: 1%;
+        gap: 1.5%;
     }
 
     &__logo {
